--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,5 +1,4 @@
-﻿@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css");
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;600&family=Roboto:wght@100&display=swap');  
+﻿@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;600&family=Roboto:wght@100&display=swap');  
 
 *{
   margin: 0cm;
@@ -62,18 +61,18 @@ body{
   margin-top: 14rem/* 224px */;
 }
 .form-full{
-  padding: 2rem/* 32px */;
+  padding: 2rem !important;
   --tw-bg-opacity: 1;
   background-color: rgb(18 18 20 / var(--tw-bg-opacity));
   border-radius: 0.25rem/* 4px */;
   align-items: center;
   justify-content: center;
-  
 }
 .title{
   font-size: 1.5rem/* 24px */;
   line-height: 2rem/* 32px */;
   margin-bottom: 1.5rem/* 24px */;
+  font-weight: bold;
   display: block;
   color: #E1E1E6;
   text-align: center;
@@ -83,6 +82,20 @@ body{
   flex-direction: column;
   gap: 0.5rem/* 8px */;
   width: 100%;
+}
+.form-full p{
+  color: #fff !important;
+  font-size: 15px !important;
+  margin-bottom: -0.5rem;
+  margin-left: 10px;
+}
+.form-full a{
+  color: #E1E1E6 !important;
+  transition: all 0.5s;
+  text-decoration: none !important;
+}
+.form-full a:hover{
+  color: #81D8F7 !important;
 }
 .form input{
   --tw-bg-opacity: 1;
@@ -185,6 +198,7 @@ footer{
   line-height: 160%;
   text-align: center;
   justify-content: center;
+  margin-top: 2rem !important;
 }
 .banner-title h1{
   color: #E1E1E6;
@@ -210,6 +224,9 @@ footer{
   justify-content: center;
   margin: 10px;
 }
+.social-media a{
+  transition: all 1s;
+}
 .social-media i{
   padding: 2rem;
   gap: 0.75rem/* 12px */;
@@ -217,6 +234,7 @@ footer{
   border-radius: 5px;
   color: #fff;
   font-size: 20px;
+  transition: all 0.5s;
 }
 .social-media p{
   color: #fff;
@@ -224,4 +242,140 @@ footer{
   font-weight: 400;
   line-height: 160%;
   text-align: center;
+}
+
+.social-media a:hover{
+  opacity: 0.5 !important;
+  color: #F07E06 !important;
+  text-decoration: none !important;
+}
+
+.title-event h1{
+  font-size: 24px !important;
+  font-weight: 400 !important;
+  line-height: 160% !important;
+}
+.description-event p{
+  font-size: 16px !important;
+  font-weight: 400 !important;
+  line-height: 160% !important;
+}
+
+.empresa{
+  display: flex;
+  width: 115px;
+  height: 74px;
+  background-color: #00875F;
+  border-radius: 10px;
+}
+.empresa a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #fff;
+  font-size: 30px;
+  margin: auto;
+  transition: all .2s;
+}
+.empresa a:hover{
+ opacity: .3rem;
+ color: #F07E06 !important;
+  text-decoration: none !important;
+}
+
+.empresa span{
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 160%;
+
+}
+.card-empresa{
+  display: flex;
+  flex-direction: row;
+  margin-top: 1rem;
+}
+.nome-description{
+  justify-content: center;
+  align-items: center;
+  margin-left: 1rem;
+  width: 100%;
+}
+.nome-description h1{
+  font-size: 20px !important;
+  font-weight: 700 !important;
+  line-height: 32px !important;
+}
+.title-modal h4{
+  font-weight: 700 !important;
+  font-size: 24px !important;
+  line-height: 160% !important;
+}
+.form-contato {
+  padding: 2rem !important;
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 18 20 / var(--tw-bg-opacity));
+  border-radius: 0.25rem/* 4px */;
+  align-items: center;
+  justify-content: center;
+}
+.form-contato p{
+  color: #fff !important;
+  font-size: 15px !important;
+  margin-left: 10px;
+}
+.form-contato  a{
+  color: #E1E1E6 !important;
+  transition: all 0.5s;
+  text-decoration: none !important;
+}
+.form-contato  a:hover{
+  color: #81D8F7 !important;
+}
+
+.form-contato  button{
+  margin-top: 1rem/* 16px */;
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 126 6 / var(--tw-bg-opacity));
+  text-transform: uppercase;
+  padding-top: 1rem/* 16px */;
+  padding-bottom: 1rem/* 16px */;
+  border-radius: 0.25rem/* 4px */;
+  font-weight: 700;
+  font-size: 0.875rem/* 14px */;
+  line-height: 1.25rem/* 20px */;
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  border: none;
+}
+.form-contato  strong{
+  color: #E1E1E6 !important;
+}
+.form-contato  button:hover{
+  opacity: 0.6;
+}
+.form-contato strong{
+  background-color: #00875F;
+  color: #fff;
+  padding: 4px;
+  border-radius: 0.25rem /* 4px */;
+  font-weight: 700;
+  font-size: 0.875rem /* 14px */;
+  line-height: 1.25rem;
+}
+.empresa img{
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  margin-top: -0rem;
+}
+.nome-description a{
+  color: #000;
+  text-decoration: none;
+  transition: all 0.5s;
+  font-weight: bold;
+}
+.nome-description a:hover{
+  color: #F07E06;
 }
